# polystep

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LIMITATIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api_overview.md  reproducibility.md
examples/: 02_snn_starter.py  03_rl_cartpole.py  04_maxsat_10k.py  05_mnist.py  06_loihi_snn_polystep.py  07_binary_net_no_ste.py  08_direct_loss_minimization.py  09_hard_decision_tree.py  README.md  _snn_demo.py
experiments/: EXPERIMENT_INDEX.md  bench_ask_tell.py
experiments/results/: README.md
experiments/runners/: ablation_ot_vs_softmax.py  hardened_env.py  nondiff_data.py  nondiff_models.py  run_all_paper.sh  run_elevation.py  run_fill_ablation_grid.py  run_gpt2_finetune.py  run_maxsat.py  run_moe.py  run_rl.py  run_timeseries.py  variant_sweep.py
experiments/scripts/: bench_eps_rescale.py
src/polystep/: __init__.py  _compiled.py  _step_blockwise.py  _step_common.py  _step_momentum.py  _step_monolithic.py  adaptive_subspace.py  api.py  ask_tell.py  blockwise.py  cma.py  cma_subspace.py  cost_nn.py  costs.py  dynamics.py  epsilon.py  geometry.py  hybrid_subspace.py  optimizer.py  quadratic_model.py  solver.py  subspace.py  transform.py
src/polystep/benchmarks/: baselines.py  utils.py
src/polystep/benchmarks/rl/: __init__.py  cartpole.py  gym_evaluator.py  metrics.py  mjlab_g1.py  policies.py  taxi.py
src/polystep/layers/: __init__.py  attention.py  rnn.py
src/polystep/objectives/: base.py  synthetic.py
src/polystep/projection/: __init__.py  sparse.py
src/polystep/solvers/: __init__.py  _prelude.py  base.py  greedy.py  kl_softmax.py  sinkhorn.py  softmax.py  tempered_softmax.py
tests/: conftest.py  test_ablation_solvers.py  test_adaptive_cifar10.py  test_adaptive_mnist.py  test_adaptive_subspace.py  test_api.py  test_ask_tell.py  test_baseline_fairness.py  test_benchmarks.py  test_biased_rotation.py  test_blockwise.py  test_bug_regressions.py  test_cma.py  test_cma_mnist.py  test_cma_subspace.py  test_compiled.py  test_cost_nn.py  test_costs.py  test_dfo_features.py  test_dynamics.py  test_elevation_experiment.py  test_fullspace_chunk_bound.py  test_fused_projection_rebuild.py  test_geometry.py  test_geometry_correctness.py  test_gpt2_finetune.py  test_hardening.py  test_hybrid_mnist.py  test_hybrid_subspace.py  test_integration.py  test_kl_softmax.py  test_kl_softmax_correctness.py  test_layers.py  test_maxsat_delta.py  test_maxsat_experiment.py  test_mixed_precision.py  test_mixed_precision_step.py  test_mnist.py  test_no_test_set_leakage.py  test_nondiff_data.py  (+26 more)
