[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polystep"
version = "0.4.0"
description = "PyTorch PolyStep Optimizer - gradient-free neural network training via entropic optimal transport"
authors = [{name = "An T. Le"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["torch>=2.10", "numpy>=2.0"]
keywords = ["pytorch", "optimal-transport", "gradient-free", "sinkhorn", "polystep", "optimization", "neural-network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/anindex/polystep"
Repository = "https://github.com/anindex/polystep"
Issues = "https://github.com/anindex/polystep/issues"

[project.optional-dependencies]
# Lightweight: just enough for examples/ demos
examples = [
    "torchvision>=0.25",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "gymnasium[classic-control]>=0.29",
]
# Core dev: lint + test the library itself (no experiment deps)
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
    "pytest-rerunfailures>=14.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]
# Full experiment reproduction (paper results, ablations, baselines)
experiments = [
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pandas>=2.0",
    "python-sat",  # unusual pre-release versioning, left unpinned to stay installable
    "torchvision>=0.25",
    "cma>=3.3",
    "gymnasium>=0.29",
]
# RL experiments (Box2D envs)
rl = [
    "gymnasium[box2d]>=0.29",
    "stable-baselines3>=2.3",
    "swig>=4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["polystep*"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
ignore = ["E501", "F401"]

[tool.ruff.lint.per-file-ignores]
# Benchmark scripts, optimizer, and examples use deferred imports after
# sys.path manipulation or long module-level docstrings - E402 is intentional.
"src/polystep/benchmarks/*.py" = ["E402"]
"src/polystep/optimizer.py" = ["E402"]
"experiments/scripts/*.py" = ["E402"]
"examples/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring CUDA GPU",
]
addopts = "-m 'not slow' --timeout=60"
filterwarnings = [
    "ignore:`torch.jit.script_method`:DeprecationWarning",
    "ignore:This process.*is multi-threaded, use of fork:DeprecationWarning",
]
